@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2004-12-14 Applied Nadia's setupext patch to fix libstdc++ link
+           problem with contour and solaris  -JDH
+
 2004-12-14 A number of pychecker inspired fixes, including removal of
            True and False from cbook which I erroneously thought was
            needed for python2.2 - JDH
